# v-agent

./: .gitignore  README.md  langchain_agent_example.py  main.py  pyproject.toml
options/: default.yaml
src/v_agent/agent/: title.py
src/v_agent/cli/: cli.py
src/v_agent/config/: config.py
src/v_agent/provider/: provider.py
src/v_agent/session/: index.py  info.py  llm.py  message.py  process.py  prompt.py  status.py  system.py
src/v_agent/storage/: db.py
src/v_agent/tool/: registry.py  skill.py  tool.py
src/v_agent/ui/: tui.py
src/v_agent/utils/: id.py
