[project]
name = "v-agent"
version = "0.1.0"
description = "V-Agent: An agentic development project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "langchain-qwq>=0.3.4",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["v_agent"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.scripts]
v_agent = "v_agent.ui.tui:main"
